--- a/webpage.html
+++ b/webpage.html
@@ -7,6 +7,7 @@
 <nav class="options">
     <ul>
       <li><a href="#">Insert_Class</a></li>
+      <li><a href="#">Insert_Student</a></li>
       <li><a href="#">Insert_Review</a></li>
       <li><a href="#">Insert_Study_Materials</a></li>
     </ul>
@@ -15,4 +16,3 @@
 
 </body>
 </html>
-
